backporting to support java8